# ambition_sprite2d_renderer

./: .gitignore  AGENTS.md  GOALS.md  README.md  README_mockingbird_boss_sprite.md  README_mockingbird_scenegraph.md  README_mockingbird_yaml_rig.md  README_pirate_standalone.md  equivalence_harness.py  fable-review-2026-07-02.md  gen_noether_rig.py  main.py  mockingbird_boss_part_editor.py  mockingbird_boss_parts.yaml  mockingbird_boss_scene.yaml  mockingbird_boss_sprite_generator.py  parity_harness.py  pyproject.toml  tools_diff_sheets.py
ambition_sprite2d_renderer/: __init__.py  __main__.py  profiling.py  yaml_io.py
ambition_sprite2d_renderer/authoring/: __init__.py  actor_contract.py  actor_profiles.py  adapters.py  animation_vocab.py  auto_capture.py  backgrounds.py  canonical.py  common_draw.py  debug_overlay.py  draw_recorder.py  faction_lineup.py  frame_debug.py  frame_source.py  generator.py  generators.py  humanoid_svg_rig.py  lasersword_common.py  packer.py  portrait.py  rendering.py  rig.py  rigdoc.py  rigdoc_codegen.py  sheet.py  sheet_build.py  skeleton.py  svg_canonicalize.py  svg_parts.py  svg_scene.py  tackon_sheet.py  ultrapack.py
ambition_sprite2d_renderer/cli/: __init__.py  commands.py  console.py  parser.py
ambition_sprite2d_renderer/configs/: boss.yaml  dividing_mite.yaml  exploding_mite.yaml  goblin.yaml  goblin_forest_spear.yaml  ninja.yaml  ninja_leader.yaml  player_extended.yaml  player_robot.yaml  raid_enforcer.yaml  ranged_skirmisher.yaml  robot.yaml  robot_guardian.yaml  robot_runner.yaml  sandbag.yaml
ambition_sprite2d_renderer/configs/factions/: music_factions.yaml
ambition_sprite2d_renderer/configs/review/: absurd_general.yaml  alice.yaml  architect.yaml  bob.yaml  craig.yaml  erdish.yaml  eve.yaml  fascist_enforcer.yaml  general_hero.yaml  goblin_brute_hammer.yaml  goblin_cave_dagger.yaml  goblin_desert_bow.yaml  goblin_forest_spear.yaml  goblin_frost_sword.yaml  goblin_shaman_staff.yaml  judy.yaml  kernel_guide.yaml  mallory.yaml  merchant_prototype.yaml  oiler.yaml  olivia.yaml  peggy.yaml  player_combat_review.yaml  player_extended.yaml  player_social_review.yaml  player_traversal_review.yaml  raid_enforcer.yaml  robot_archivist.yaml  robot_caster.yaml  robot_diver.yaml  robot_engineer.yaml  robot_guardian.yaml  robot_medic.yaml  sybil.yaml  (+9 more)
ambition_sprite2d_renderer/core/: __init__.py  draw.py  equivalence.py  frameset.py  manifest.py  manifest_ron.py  measure.py  pipeline.py
ambition_sprite2d_renderer/data/: pack_plan.yaml
ambition_sprite2d_renderer/devtools/: __init__.py  debug_hitboxes.py  ldtk_manifest.py
ambition_sprite2d_renderer/gui/: __main__.py  app.py  canvas.py  external.py  panels.py  state.py  timeline.py
ambition_sprite2d_renderer/registry/: __init__.py  character_generators.py  config.py  discovery.py  pack_groups.py
ambition_sprite2d_renderer/targets/: __init__.py  super_mary_o_common.py
docs/: ENTITY_TODOS.md  actor_contract.md  design.md  walk_cycle_baseline.md
pca_legacy/: README.md  README_pca_front_eye_fix_v14.md  _LEGACY.md  pca_detect_spots.py  pca_eval.py  pca_hierarchy.py  pca_inspect.py  pca_paperdoll.py  pca_parts.py  pca_paths.py  pca_pipeline.py  pca_polish.py  pca_seg.py  pca_silhouette.py  pca_substrate.py  pca_svg.py  perfect_cellular_automaton_pil_concept_sheet_v14.py  perfect_cellular_automaton_pose_polygons_v14.json
scripts/: build_m_leblanc_rig.py  build_oiler_rig.py  profile_benchmarks.py
specs/active/: sandbag.yaml
tests/: conftest.py  test_actor_contract.py  test_blending_draw.py  test_body_inset.py  test_burning_flying_shark_target.py  test_cli_batch_publish.py  test_core_measure.py  test_core_minimal_deps.py  test_core_overlay.py  test_core_pipeline.py  test_creator_lab_props_target.py  test_creator_target.py  test_diagnose_idle_coverage.py  test_draw_recorder.py  test_equivalence.py  test_erdish_scholar.py  test_eve_eavesdropper_target.py  test_frame_source.py  test_gen2d.py  test_gif_frame_extraction.py  test_imperfect_cellular_automaton_target.py  test_interdimensional_gate_target.py  test_intro_cart_target.py  test_intro_lab_tileset_target.py  test_ldtk_manifest.py  test_mami_marzakhani.py  test_mary_marzakhani.py  test_ninja_heavy.py  test_no_raw_imagedraw.py  test_oiler_svg_rig.py  test_packer.py  test_part_discovery.py  test_player_robot_fable_target.py  test_portrait_product.py  test_profile_benchmarks_script.py  test_profiling.py  test_raid_enforcer.py  test_regen_performance_contracts.py  test_render_scale.py  test_review.py  (+18 more)
(+180 files in other folders)
