[project]
name = "ambition-sprite2d-renderer"
version = "0.3.0"
description = "Procedural 2D sprite/spritesheet renderer for Ambition assets (character lab + tack-on targets)"
requires-python = ">=3.10"
dependencies = [
  "Pillow>=9",
  "PyYAML>=6",
  "rich>=13",
  # SVG rasterizer for `sprite` rig parts (binds hand-authored Inkscape art to
  # bones). Self-contained wheel — no system cairo/inkscape needed.
  "resvg-py>=0.3",
]

[project.scripts]
ambition-sprite2d-renderer = "ambition_sprite2d_renderer.cli:main"
ambition-mockingbird-boss = "ambition_sprite2d_renderer.targets.characters.mockingbird_boss.sprite_generator:cli"

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["ambition_sprite2d_renderer*"]

[tool.setuptools.package-data]
ambition_sprite2d_renderer = ["configs/**/*.yaml", "targets/characters/mockingbird_boss/*.yaml"]
