[project]
name = "ambition-sprite2d-renderer"
version = "0.3.0"
description = "Procedural 2D sprite/spritesheet renderer for Ambition assets (character lab + tack-on targets)"
requires-python = ">=3.10"
dependencies = [
  "Pillow>=9",
  "PyYAML>=6",
  "rich>=13",
  # SVG rasterizer for `sprite` rig parts (binds hand-authored Inkscape art to
  # bones). Self-contained wheel — no system cairo/inkscape needed.
  "resvg-py>=0.3",
  # Whitespace/attribute-preserving XML tree for the SVG canonicalizer
  # (authoring/svg_canonicalize.py) — strips Inkscape bloat into a stable,
  # diff-friendly form that survives round-tripping through Inkscape saves.
  "lxml>=5",
  # 2D rectangle bin-packing (MaxRects / Skyline / Guillotine) for the sprite
  # atlas packer (authoring/packer.py). We delegate the NP-hard packing
  # heuristic here and keep alpha-trim + extrude + RON metadata in-pipeline.
  "rectpack>=0.2",
]

[project.scripts]
ambition-sprite2d-renderer = "ambition_sprite2d_renderer.cli:main"
ambition-mockingbird-boss = "ambition_sprite2d_renderer.targets.characters.mockingbird_boss.sprite_generator:cli"

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["ambition_sprite2d_renderer*"]

[tool.setuptools.package-data]
ambition_sprite2d_renderer = ["configs/**/*.yaml", "targets/characters/mockingbird_boss/*.yaml"]
